--- a/usher-common/usher-common-rpc/usher-common-rpc-registry/pom.xml
+++ b/usher-common/usher-common-rpc/usher-common-rpc-registry/pom.xml
@@ -3,14 +3,19 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>usher-common-rpc-registry</artifactId>
+
+    <name>usher-common-rpc-registry</name>
+
+    <description>
+        rpc注册中心模块
+    </description>
+    <url>https://gitee.com/opentech_usher/usher/tree/master/usher-common/usher-common-rpc/usher-common-rpc-registry</url>
     <parent>
-        <groupId>team.opentech.usher</groupId>
+        <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-common-rpc</artifactId>
         <version>2.1.0.1.usher-SNAPSHOT</version>
     </parent>
-
-    <artifactId>usher-common-rpc-registry</artifactId>
-
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
@@ -22,7 +27,7 @@
             <artifactId>nacos-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-common-rpc-cluster</artifactId>
         </dependency>
         <!-- 单元测试 -->
