--- a/usher-api/usher-api-provider-algorithm/pom.xml
+++ b/usher-api/usher-api-provider-algorithm/pom.xml
@@ -7,19 +7,27 @@
 
     <artifactId>usher-api-provider-algorithm</artifactId>
 
+    <name>usher-api-provider-algorithm</name>
+    <description>
+        算法应用二方包
+    </description>
+
+
+    <packaging>jar</packaging>
+    <url>https://gitee.com/opentech_usher/usher/tree/master/usher-api/usher-api-provider-algorithm</url>
     <parent>
-        <groupId>team.opentech.usher</groupId>
+        <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-api</artifactId>
         <version>2.1.0.1.usher-SNAPSHOT</version>
     </parent>
-    <packaging>jar</packaging>
+
     <dependencies>
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-common-base</artifactId>
         </dependency>
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-api-provider-user</artifactId>
         </dependency>
     </dependencies>
