--- a/usher-api/usher-api-provider-distribute/pom.xml
+++ b/usher-api/usher-api-provider-distribute/pom.xml
@@ -6,26 +6,26 @@
     <version>2.1.0.1.usher-SNAPSHOT</version>
     <artifactId>usher-api-provider-distribute</artifactId>
     <parent>
-        <groupId>team.opentech.usher</groupId>
+        <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-api</artifactId>
         <version>2.1.0.1.usher-SNAPSHOT</version>
     </parent>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-common-base</artifactId>
         </dependency>
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-api-provider-log</artifactId>
         </dependency>
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-api-provider-user</artifactId>
         </dependency>
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-api-provider-algorithm</artifactId>
         </dependency>
     </dependencies>
