--- a/usher-api/usher-api-provider-software/pom.xml
+++ b/usher-api/usher-api-provider-software/pom.xml
@@ -6,14 +6,23 @@
     <version>2.1.0.1.usher-SNAPSHOT</version>
 
     <artifactId>usher-api-provider-software</artifactId>
+    <name>usher-api-provider-software</name>
+
+
+    <description>
+        中间件管理应用二方包
+    </description>
+    <url>https://gitee.com/opentech_usher/usher/tree/master/usher-api/usher-api-provider-software</url>
     <parent>
-        <groupId>team.opentech.usher</groupId>
+        <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-api</artifactId>
         <version>2.1.0.1.usher-SNAPSHOT</version>
     </parent>
+
+
     <dependencies>
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-common-base</artifactId>
         </dependency>
     </dependencies>
