--- a/usher-api/usher-api-provider-user/pom.xml
+++ b/usher-api/usher-api-provider-user/pom.xml
@@ -5,15 +5,24 @@
     <modelVersion>4.0.0</modelVersion>
     <version>2.1.0.1.usher-SNAPSHOT</version>
     <artifactId>usher-api-provider-user</artifactId>
+    <name>usher-api-provider-user</name>
+
+
+    <description>
+        用户管理应用二方包
+    </description>
+    <url>https://gitee.com/opentech_usher/usher/tree/master/usher-api/usher-api-provider-user</url>
     <parent>
-        <groupId>team.opentech.usher</groupId>
+        <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-api</artifactId>
         <version>2.1.0.1.usher-SNAPSHOT</version>
     </parent>
+
+
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-common-base</artifactId>
         </dependency>
     </dependencies>
