--- a/usher-common/pom.xml
+++ b/usher-common/pom.xml
@@ -6,7 +6,7 @@
     <version>2.1.0.1.usher-SNAPSHOT</version>
     <artifactId>usher-common</artifactId>
     <parent>
-        <groupId>team.opentech.usher</groupId>
+        <groupId>top.uhyils.usher</groupId>
         <artifactId>usher</artifactId>
         <version>2.1.0.1.usher-SNAPSHOT</version>
     </parent>
