--- a/usher-common/usher-common-data/usher-common-data-redis/pom.xml
+++ b/usher-common/usher-common-data/usher-common-data-redis/pom.xml
@@ -3,14 +3,19 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>usher-common-data-redis</artifactId>
+
+    <name>usher-common-data-redis</name>
+
+    <description>
+        redis 工具包
+    </description>
+    <url>https://gitee.com/opentech_usher/usher/tree/master/usher-common/usher-common-data/usher-common-data-redis</url>
     <parent>
-        <groupId>team.opentech.usher</groupId>
+        <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-common-data</artifactId>
         <version>2.1.0.1.usher-SNAPSHOT</version>
     </parent>
-
-    <artifactId>usher-common-data-redis</artifactId>
-
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
@@ -19,7 +24,7 @@
             <artifactId>jedis</artifactId>
         </dependency>
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-common-base</artifactId>
         </dependency>
         <!--引入AOP依赖-->
@@ -31,9 +36,9 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/team.opentech.usher/usher-rpc-spring-start -->
+        <!-- https://mvnrepository.com/artifact/top.uhyils.usher/usher-rpc-spring-start -->
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-common-rpc-spring-start</artifactId>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
