--- a/usher-common/usher-common-util/pom.xml
+++ b/usher-common/usher-common-util/pom.xml
@@ -11,7 +11,7 @@
         <module>usher-common-util-scenario</module>
     </modules>
     <parent>
-        <groupId>team.opentech.usher</groupId>
+        <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-common</artifactId>
         <version>2.1.0.1.usher-SNAPSHOT</version>
     </parent>
