--- a/usher-common/usher-common-util/usher-common-util-scenario/pom.xml
+++ b/usher-common/usher-common-util/usher-common-util-scenario/pom.xml
@@ -3,14 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <artifactId>usher-common-util-scenario</artifactId>
+
+    <name>usher-common-util-scenario</name>
+
+    <description>
+        情景识别尝试(报用,临时不要用)
+    </description>
+    <url>https://gitee.com/opentech_usher/usher/tree/master/usher-common/usher-common-util/usher-common-util-scenario</url>
     <parent>
-        <groupId>team.opentech.usher</groupId>
+        <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-common-util</artifactId>
         <version>2.1.0.1.usher-SNAPSHOT</version>
     </parent>
-
-    <artifactId>usher-common-util-scenario</artifactId>
-
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
@@ -19,7 +24,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-common-base</artifactId>
         </dependency>
 
