--- a/usher-out/usher-out-parse/pom.xml
+++ b/usher-out/usher-out-parse/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>team.opentech.usher</groupId>
+        <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-out</artifactId>
         <version>2.1.0.1.usher-SNAPSHOT</version>
     </parent>
@@ -39,7 +39,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>team.opentech.usher</groupId>
+            <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-common-base</artifactId>
         </dependency>
 
