--- a/usher-service/pom.xml
+++ b/usher-service/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>usher-service</artifactId>
 
     <parent>
-        <groupId>team.opentech.usher</groupId>
+        <groupId>top.uhyils.usher</groupId>
         <artifactId>usher</artifactId>
         <version>2.1.0.1.usher-SNAPSHOT</version>
     </parent>
