--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>top.uhyils.usher</groupId>
     <artifactId>usher</artifactId>
-    <version>2.1.0.1.usher-SNAPSHOT</version>
+    <version>2.1.0.2.usher</version>
     <description>
         一个伟大的项目, 包含各个方面
     </description>
