--- a/usher-api/usher-api-provider-ai-control/pom.xml
+++ b/usher-api/usher-api-provider-ai-control/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-api</artifactId>
-        <version>2.1.0.1.usher-SNAPSHOT</version>
+        <version>2.1.0.2.usher</version>
     </parent>
 
     <dependencies>
