--- a/usher-common/usher-common-rpc/pom.xml
+++ b/usher-common/usher-common-rpc/pom.xml
@@ -8,7 +8,7 @@
             <dependency>
                 <groupId>top.uhyils.usher</groupId>
                 <artifactId>usher-common-base</artifactId>
-                <version>2.1.0.1.usher-SNAPSHOT</version>
+                <version>2.1.0.2.usher</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
             <dependency>
@@ -176,7 +176,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-common</artifactId>
-        <version>2.1.0.1.usher-SNAPSHOT</version>
+        <version>2.1.0.2.usher</version>
     </parent>
 
 
