--- a/usher-common/usher-common-service/pom.xml
+++ b/usher-common/usher-common-service/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-common</artifactId>
-        <version>2.1.0.1.usher-SNAPSHOT</version>
+        <version>2.1.0.2.usher</version>
     </parent>
     <dependencies>
         <!--引入AOP依赖-->
