--- a/usher-common/usher-common-util/usher-common-util-ustream/pom.xml
+++ b/usher-common/usher-common-util/usher-common-util-ustream/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-common-util</artifactId>
-        <version>2.1.0.1.usher-SNAPSHOT</version>
+        <version>2.1.0.2.usher</version>
     </parent>
 
     <dependencies>
