--- a/usher-out/pom.xml
+++ b/usher-out/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher</artifactId>
-        <version>2.1.0.1.usher-SNAPSHOT</version>
+        <version>2.1.0.2.usher</version>
     </parent>
 
     <modules>
