--- a/usher-out/usher-out-inside-package/pom.xml
+++ b/usher-out/usher-out-inside-package/pom.xml
@@ -8,7 +8,7 @@
     <groupId>top.uhyils.usher</groupId>
 
     <artifactId>usher-out-inside-package</artifactId>
-    <version>2.1.0.1.usher-SNAPSHOT</version>
+    <version>2.1.0.2.usher</version>
     <description>usher-out 内部项目版本控制</description>
     <packaging>pom</packaging>
 
