--- a/usher-out/usher-out-parse/pom.xml
+++ b/usher-out/usher-out-parse/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-out</artifactId>
-        <version>2.1.0.1.usher-SNAPSHOT</version>
+        <version>2.1.0.2.usher</version>
     </parent>
 
     <artifactId>usher-out-parse</artifactId>
