--- a/usher-service/usher-service-ai-control/pom.xml
+++ b/usher-service/usher-service-ai-control/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-service</artifactId>
-        <version>2.1.0.1.usher-SNAPSHOT</version>
+        <version>2.1.0.2.usher</version>
     </parent>
 
     <dependencies>
