--- a/usher-service/usher-service-log/pom.xml
+++ b/usher-service/usher-service-log/pom.xml
@@ -3,7 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <version>2.1.0.1.usher-SNAPSHOT</version>
+    <version>2.1.0.2.usher</version>
     <artifactId>usher-service-log</artifactId>
     <name>usher-service-log</name>
     <description>
@@ -15,7 +15,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-service</artifactId>
-        <version>2.1.0.1.usher-SNAPSHOT</version>
+        <version>2.1.0.2.usher</version>
     </parent>
     <dependencies>
 
