--- a/usher-api/usher-api-provider-gateway-sdk/pom.xml
+++ b/usher-api/usher-api-provider-gateway-sdk/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-api</artifactId>
-        <version>2.1.0.2.usher</version>
+        <version>2.1.0.2.usher-SNAPSHOT</version>
     </parent>
     <dependencies>
         <dependency>
