--- a/usher-common/usher-common-hot-spot/pom.xml
+++ b/usher-common/usher-common-hot-spot/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-common</artifactId>
-        <version>2.1.0.2.usher</version>
+        <version>2.1.0.2.usher-SNAPSHOT</version>
     </parent>
 
     <dependencies>
