--- a/usher-common/usher-common-inside-package/pom.xml
+++ b/usher-common/usher-common-inside-package/pom.xml
@@ -7,7 +7,7 @@
     <groupId>top.uhyils.usher</groupId>
 
     <artifactId>usher-common-inside-package</artifactId>
-    <version>2.1.0.2.usher</version>
+    <version>2.1.0.2.usher-SNAPSHOT</version>
     <description>usher 内部项目版本控制</description>
     <packaging>pom</packaging>
 
