--- a/usher-common/usher-common-rpc/usher-common-rpc-proxy/pom.xml
+++ b/usher-common/usher-common-rpc/usher-common-rpc-proxy/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-common-rpc</artifactId>
-        <version>2.1.0.2.usher</version>
+        <version>2.1.0.2.usher-SNAPSHOT</version>
     </parent>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
