--- a/usher-common/usher-common-util/pom.xml
+++ b/usher-common/usher-common-util/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-common</artifactId>
-        <version>2.1.0.2.usher</version>
+        <version>2.1.0.2.usher-SNAPSHOT</version>
     </parent>
 
     <artifactId>usher-common-util</artifactId>
