--- a/usher-common/usher-common-util/usher-common-util-trace-executor/pom.xml
+++ b/usher-common/usher-common-util/usher-common-util-trace-executor/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <artifactId>usher-common-util</artifactId>
         <groupId>top.uhyils.usher</groupId>
-        <version>2.1.0.2.usher</version>
+        <version>2.1.0.2.usher-SNAPSHOT</version>
     </parent>
     <packaging>jar</packaging>
     <properties>
