--- a/usher-service/usher-service-work-orders/pom.xml
+++ b/usher-service/usher-service-work-orders/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <version>2.1.0.2.usher</version>
+    <version>2.1.0.2.usher-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>usher-service-work-orders</artifactId>
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>usher-service</artifactId>
         <groupId>top.uhyils.usher</groupId>
-        <version>2.1.0.2.usher</version>
+        <version>2.1.0.2.usher-SNAPSHOT</version>
     </parent>
 
     <dependencyManagement>
