--- a/usher-service/usher-service-ai-control/pom.xml
+++ b/usher-service/usher-service-ai-control/pom.xml
@@ -31,6 +31,10 @@
             <groupId>top.uhyils.usher</groupId>
             <artifactId>usher-api-provider-ai-control</artifactId>
         </dependency>
+        <dependency>
+            <groupId>top.uhyils.usher</groupId>
+            <artifactId>usher-api-provider-ai-device-manager</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
