--- a/usher-common/usher-common-inside-package/pom.xml
+++ b/usher-common/usher-common-inside-package/pom.xml
@@ -131,6 +131,11 @@
             </dependency>
             <dependency>
                 <groupId>top.uhyils.usher</groupId>
+                <artifactId>usher-api-provider-ai-device-manager</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>top.uhyils.usher</groupId>
                 <artifactId>usher-api-provider-algorithm</artifactId>
                 <version>${project.version}</version>
             </dependency>
